# Projet_final_groupe_B

./: LICENSE.md  README.md  app.py  coefficients_multi_saisons.json  coefficients_pilotes_saisons.json  coefficients_simulateur_f1.json  coefficients_simulateur_poly.json  config.yaml  generer_base_pilotes.py  generer_validation.py  pyproject.toml  requirements.txt  validation_resultats.json
docs/source/: conf.py
src/: config_loader.py  data_loader.py  generer_base_pilotes.py  generer_validation.py  regression_engine.py  simulation.py  test_graph.py  visualizer.py
tests/: test_data_loader.py  test_regression_engine.py  test_simulation.py  test_visualizer.py
