[build-system]
requires=["setuptools>=61.0"]
build-backend ="setuptools.build_meta"

[project]
name = "F1StrategieSimulateur"
version = "0.1"
description="Projet final pour le cours de MGA802"
authors = [
  {name = "Nais Vigroux"},
  {name = "Paul Serra"},
  {name = "Axel Walraet-Triolet"}
]

dependencies = [
  "fastf1>=3.8.3",
  "matplotlib>=3.7.0",
  "numpy>=2.4.6",
  "pandas>=2.0.0",
  "scikit_learn>=1.9.0",
  "streamlit>=1.58.0",
  "seaborn>=0.13.0",
  "requests_cache>=1.1.0"
]

readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["F1", "Formule 1", "Strategie", "Simulateur", "pneus", "stand"]

[project.urls]
Repository = "https://github.com/AxelWalraetTriolet/Projet_final_groupe_B.git"
